--- a/index.html
+++ b/index.html
@@ -1,42 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JP's Portfolio</title>
-    <meta name="description" content="Portfolio of JP Conan - Copywriting, Media Production, and Client Work">
-    <link rel="stylesheet" href="style.css">
-    
-    <!-- Premium Fonts -->
+    <title>JP Conan</title>
+    <meta name="description" content="Portfolio of JP Conan - Creative, Writer, Media Producer">
+
+    <!-- Google Fonts: Inter (Regular 400, Black 900) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Playfair+Display:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Ionicons for some potential icons later, usually good to have -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
+
 <body>
 
-    <header class="site-header">
-        <div class="logo">JP Conan</div>
-        <nav>
-            <ul>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <main class="container">
+        <!-- Section 1: Header & Navigation -->
+        <section class="intro-section">
+            <a href="https://jpconan.ca/" class="logo-link">
+                <!-- Inline SVG to ensure visibility -->
+                <svg class="main-logo" width="300" height="99" viewBox="0 0 1785.22 592.79"
+                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="JP Conan">
+                    <g>
+                        <path fill="#10301e" stroke="#ea461d" stroke-miterlimit="10" stroke-width="52"
+                            d="M1759.17 285.47v21.79c0 143.301-116.169 259.47-259.47 259.47H285.56c-143.301 0-259.47-116.169-259.47-259.47v-21.79C26.09 142.169 142.259 26 285.56 26H1499.7c143.301 0 259.47 116.169 259.47 259.47z" />
+                        <path
+                            d="M265.9 415.89c-27.29 0-48.33-6.56-63.12-19.69-14.79-13.12-22.19-31.88-22.19-56.25v-14.53h63.12v15.78c0 8.54 1.93 14.95 5.78 19.22s9.32 6.41 16.41 6.41 12.5-2.13 16.25-6.41c3.75-4.27 5.62-10.78 5.62-19.53V179.95h62.19v159.69c0 24.48-7.27 43.31-21.8 56.48-14.53 13.18-35.29 19.77-62.27 19.77Z"
+                            fill="#eef1db" />
+                        <path
+                            d="M379.96 412.77V179.96h100.31q25.935 0 45.39 10.23c12.97 6.82 23.07 16.43 30.31 28.83s10.86 26.87 10.86 43.44-3.7 31.07-11.09 43.2c-7.4 12.14-17.76 21.51-31.09 28.12-13.33 6.62-28.85 9.92-46.56 9.92h-60v-49.06h47.19c7.5 0 13.91-1.33 19.22-3.98s9.38-6.38 12.19-11.17 4.22-10.47 4.22-17.03-1.41-12.52-4.22-17.27c-2.81-4.74-6.88-8.36-12.19-10.86s-11.72-3.75-19.22-3.75h-22.19v182.19h-63.12Z"
+                            fill="#eef1db" />
+                        <path
+                            d="M698.09 415.89c-21.25 0-40.34-4.58-57.27-13.75s-30.31-22.63-40.16-40.39c-9.84-17.76-14.77-39.5-14.77-65.23s5-47.81 15-65.62 23.49-31.27 40.47-40.39c16.98-9.11 35.88-13.67 56.72-13.67 14.48 0 27.84 1.95 40.08 5.86s22.99 9.61 32.27 17.11q13.905 11.25 22.5 27.66c5.73 10.94 9.32 23.44 10.78 37.5h-64.06c-.62-5-1.95-9.53-3.98-13.59s-4.71-7.55-8.05-10.47c-3.33-2.92-7.32-5.16-11.95-6.72-4.64-1.56-9.87-2.34-15.7-2.34-10.52 0-19.45 2.58-26.8 7.73s-12.89 12.55-16.64 22.19-5.62 21.23-5.62 34.77 1.93 26.04 5.78 35.62 9.4 16.77 16.64 21.56 16.02 7.19 26.33 7.19c5.83 0 11.04-.78 15.62-2.34q6.87-2.34 12.03-6.72c3.44-2.92 6.22-6.41 8.36-10.47 2.13-4.06 3.57-8.59 4.3-13.59h64.06c-.73 9.9-3.46 20-8.2 30.31q-7.11 15.465-20.31 28.59c-8.8 8.75-19.64 15.81-32.5 21.17-12.87 5.36-27.84 8.05-44.92 8.05Z"
+                            fill="#eef1db" />
+                        <path
+                            d="M914.34 415.89c-18.96 0-35.21-3.77-48.75-11.33q-20.31-11.325-31.02-31.56c-7.14-13.49-10.7-29.19-10.7-47.11s3.57-33.62 10.7-47.11q10.695-20.235 31.02-31.56c13.54-7.55 29.79-11.33 48.75-11.33s35.16 3.78 48.59 11.33c13.44 7.55 23.72 18.07 30.86 31.56 7.13 13.49 10.7 29.19 10.7 47.11s-3.57 33.62-10.7 47.11c-7.14 13.49-17.42 24.01-30.86 31.56s-29.64 11.33-48.59 11.33m0-46.87q8.13 0 13.98-5.16c5.85-5.16 6.9-8.41 8.98-14.92s3.12-14.3 3.12-23.36-1.04-16.93-3.12-23.28-5.08-11.2-8.98-14.53c-3.91-3.33-8.57-5-13.98-5s-10.26 1.67-14.22 5-6.98 8.18-9.06 14.53-3.12 14.12-3.12 23.28 1.04 16.85 3.12 23.36 5.1 11.48 9.06 14.92q5.94 5.16 14.22 5.16"
+                            fill="#eef1db" />
+                        <path
+                            d="M1092.93 314.64v98.12h-62.81V238.07h58.91l1.25 44.69h-1.88c3.96-13.23 10.39-24.35 19.3-33.36s21.38-13.52 37.42-13.52c12.4 0 23.15 2.81 32.27 8.44 9.11 5.62 16.17 13.39 21.17 23.28 5 9.9 7.5 21.2 7.5 33.91v111.25h-62.81v-98.12c0-8.65-2.19-15.44-6.56-20.39-4.38-4.95-10.52-7.42-18.44-7.42-5.1 0-9.56 1.12-13.36 3.36s-6.75 5.42-8.83 9.53c-2.08 4.12-3.12 9.09-3.12 14.92Z"
+                            fill="#eef1db" />
+                        <path
+                            d="M1286.68 415.58q-16.725 0-29.61-5.55c-12.885-5.55-15.29-9.3-20.08-16.8s-7.19-17.03-7.19-28.59c0-9.58 1.61-17.76 4.84-24.53s7.76-12.32 13.59-16.64 12.63-7.66 20.39-10 16.17-3.83 25.23-4.45c9.79-.73 17.63-1.61 23.52-2.66 5.88-1.04 10.16-2.58 12.81-4.61s3.98-4.71 3.98-8.05v-.62c0-3.02-.81-5.57-2.42-7.66-1.62-2.08-3.88-3.67-6.8-4.77-2.92-1.09-6.41-1.64-10.47-1.64s-7.55.57-10.78 1.72-5.91 2.87-8.05 5.16-3.57 5.21-4.3 8.75l-56.56-5.62c1.67-9.79 5.73-18.7 12.19-26.72s15.39-14.43 26.8-19.22 25.29-7.19 41.64-7.19c12.4 0 23.62 1.46 33.67 4.37 10.05 2.92 18.65 6.98 25.78 12.19s12.6 11.28 16.41 18.2c3.8 6.93 5.7 14.4 5.7 22.42v119.69h-58.75v-24.69h-1.25c-3.54 6.56-7.79 11.85-12.73 15.86-4.95 4.01-10.55 6.95-16.8 8.83s-13.18 2.81-20.78 2.81Zm20.32-39.69c4.79 0 9.3-.99 13.52-2.97s7.66-4.82 10.31-8.52c2.66-3.7 3.98-8.2 3.98-13.52V336.5c-1.67.62-3.44 1.25-5.31 1.88s-3.88 1.2-6.02 1.72-4.32.99-6.56 1.41-4.61.83-7.11 1.25c-4.9.73-8.88 1.95-11.95 3.67s-5.34 3.8-6.8 6.25-2.19 5.18-2.19 8.2c0 3.23.78 5.96 2.34 8.2s3.7 3.93 6.41 5.08 5.83 1.72 9.38 1.72Z"
+                            fill="#eef1db" />
+                        <path
+                            d="M1491.68 314.64v98.12h-62.81V238.07h58.91l1.25 44.69h-1.88c3.96-13.23 10.39-24.35 19.3-33.36s21.38-13.52 37.42-13.52c12.4 0 23.15 2.81 32.27 8.44 9.11 5.62 16.17 13.39 21.17 23.28 5 9.9 7.5 21.2 7.5 33.91v111.25H1542v-98.12c0-8.65-2.19-15.44-6.56-20.39-4.38-4.95-10.52-7.42-18.44-7.42-5.1 0-9.56 1.12-13.36 3.36s-6.75 5.42-8.83 9.53c-2.08 4.12-3.12 9.09-3.12 14.92Z"
+                            fill="#eef1db" />
+                    </g>
+                </svg>
+            </a>
 
-    <main>
-        <section class="hero">
-            <h1>I make things.</h1>
-            <p class="subtitle">Copywriting. Media Production. Creative Strategy.</p>
+            <nav class="pill-nav">
+                <button class="pill-btn">Work</button>
+                <button class="pill-btn">About</button>
+                <button class="pill-btn">Contact</button>
+            </nav>
         </section>
 
-        <!-- Placeholder for content to come -->
-        <section id="work">
-            <p class="construction-notice">🚀 Rebuilding something cool.</p>
+        <!-- Section 2: Bio -->
+        <section class="bio-section">
+            <h1>I make things.</h1>
+            <p class="bio-text">
+                I'm a creative with a knack for out-there ideas and executions that stand out. I'm a generalist—I'm
+                curious about everything—but my biggest strengths are writing and media production, particularly video
+                editing.
+            </p>
         </section>
     </main>
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
